# controller/admin_login.go
@@ -7,9 +7,16 @@
 package controller
 
 import (
+	"encoding/json"
+	"time"
+
+	"github.com/e421083458/golang_common/lib"
+	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
+	dao2 "github.com/zhangxuanru/go_gateway_demo/dao"
 	"github.com/zhangxuanru/go_gateway_demo/dto"
 	"github.com/zhangxuanru/go_gateway_demo/middleware"
+	"github.com/zhangxuanru/go_gateway_demo/public"
 )
 
 type AdminLoginController struct {
@@ -17,14 +24,49 @@ type AdminLoginController struct {
 
 func RegisterAdminLogin(router *gin.RouterGroup) {
 	adminLogin := &AdminLoginController{}
-	router.GET("/login", adminLogin.AdminLogin)
+	router.POST("/login", adminLogin.AdminLogin)
 }
 
+// AdminLogin godoc
+// @Summary 管理员登录
+// @Description 管理员登录
+// @Tags 管理员接口
+// @ID /admin_login/login
+// @Accept  json
+// @Produce  json
+// @Param body body dto.AdminLoginInput true "body"
+// @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
+// @Router /admin_login/login [post]
 func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
 	params := &dto.AdminLoginInput{}
 	if err := params.BindValidParam(c); err != nil {
-	    middleware.ResponseError(c, 1001, err)
+		middleware.ResponseError(c, 1001, err)
 		return
 	}
-	middleware.ResponseSuccess(c, "")
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+	dao := &dao2.Admin{}
+	admin, err := dao.LoginCheck(c, tx, params)
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	session := sessions.Default(c)
+	sessionAdmin := &dto.AdminSessionInfo{
+		ID:        admin.Id,
+		UserName:  admin.UserName,
+		LoginTime: time.Now(),
+	}
+	sessBytes, err := json.Marshal(sessionAdmin)
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+	session.Set(public.SESSION_ADMIN_INFO_KEY, string(sessBytes))
+	session.Save()
+	out := &dto.AdminLoginOutput{Token: admin.UserName}
+	middleware.ResponseSuccess(c, out)
 }
